# riscEmulator

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  run_programs.sh  run_test.sh
docs/html/: algorithms_8cpp.html  algorithms_8cpp__incl.dot  algorithms_8hpp.html  algorithms_8hpp__dep__incl.dot  algorithms_8hpp__incl.dot  algorithms_8hpp_source.html  annotated.html  classFactorialTest-members.html  classFactorialTest.html  classFactorialTest__coll__graph.dot  classFactorialTest__inherit__graph.dot  classFibonacciTest-members.html  classFibonacciTest.html  classFibonacciTest__coll__graph.dot  classFibonacciTest__inherit__graph.dot  classRiscMachine-members.html  classRiscMachine.html  classRiscMachineTest-members.html  classRiscMachineTest.html  classRiscMachineTest__coll__graph.dot  classRiscMachineTest__inherit__graph.dot  classSumListTest-members.html  classSumListTest.html  classSumListTest__coll__graph.dot  classSumListTest__inherit__graph.dot  classes.html  dir_000001_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  graph_legend.html  hierarchy.html  (+28 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  (+32 more)
src/: algorithms.cpp  algorithms.hpp  instruction.hpp  logging.hpp  machine.cpp  machine.hpp  machine_test.cpp  main.cpp  main_output.txt
tests/: machine_gtest.cpp  test_output.txt
